--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      text-align: center;
     }
     h1 {
       color: #4caf50;
+    }
+    p {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #ccc;
+      max-width: 600px;
+    }
+    code {
+      background-color: #333;
+      padding: 2px 6px;
+      border-radius: 4px;
     }
     a {
       display: inline-block;
@@ -32,17 +44,22 @@
     a:hover {
       background-color: #45a049;
     }
-    p {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #ccc;
-    }
   </style>
 </head>
 <body>
   <h1>Launcher Tonton du Cube</h1>
-  <p>Cliquez ci-dessous pour télécharger le launcher officiel :</p>
-  <a href="files/launcher.zip" download>Télécharger le launcher</a>
-  <p>Assurez-vous que le fichier <code>launcher.zip</code> est bien dans le dossier <code>files</code> du dépôt.</p>
+  <p>
+    Ce launcher se chargera automatiquement de télécharger la bonne version de Minecraft ainsi que les ressources nécessaires depuis notre dépôt GitHub.
+  </p>
+  <p>
+    Assurez-vous que vous avez déjà installé le launcher principal disponible sur : 
+    <a href="https://github.com/KinderrKill/Minecraft-Installer" target="_blank">Minecraft Installer</a>.
+  </p>
+  <p>
+    Les versions de Minecraft, mods et packs de ressources sont gérés automatiquement par ce launcher et récupérés depuis notre dépôt GitHub.
+  </p>
+  <p>
+    Aucun téléchargement manuel supplémentaire n'est nécessaire.
+  </p>
 </body>
 </html>
